# 553-final-project

./: CMakeLists.txt  README.md  main.cpp
Milestone/: CMakeLists.txt  README.md  main.cpp
Milestone/include/: ArtisticFilter.h  ImageLoader.h  InpaintingProcessor.h  Menu.h
Milestone/src/: ArtisticFilter.cpp  FilterProcessor.cpp  ImageLoader.cpp  InpaintingProcessor.cpp  Menu.cpp
include/: ArtisticFilter.h  FilterProcessor.h  FilteredPhoto.h  ImageCollager.h  Photo.h  TransferredPhoto.h
src/: ArtisticFilter.cpp  FilterProcessor.cpp  FilteredPhoto.cpp  ImageCollager.cpp  Photo.cpp  TransferredPhoto.cpp
